Add basic navbar

--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -2,6 +2,12 @@
 @import ../../node_modules/bulma/sass/utilities/initial-variables
 @import ../../node_modules/bulma/sass/utilities/functions
 
+@import variables
+
+.navbar-title
+  color: $gray
+  margin-left: 10%
+  font-size: 1.75rem
 
 // Final Bulma import
 @import ../../node_modules/bulma/bulma
