--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,13 +1,19 @@
+{{- $navbarLogo := .Site.Params.logos.navbar }}
 <nav class="navbar" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand">
-    <a class="navbar-item" href="https://bulma.io">
-      <img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
-    </a>
+  <div class="container">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="/">
+        <img src="{{ printf "/img/logos/%s" $navbarLogo }}" alt="Prometheus navbar logo">
+        <span class="navbar-title">
+          {{ .Site.Title }}
+        </span>
+      </a>
 
-    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-    </a>
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
   </div>
 </nav>
