--- a/source/sass/variables.sass
+++ b/source/sass/variables.sass
@@ -1,5 +1,13 @@
 $navbar-background-color: black
-$navbar-height: 5.5rem
+$navbar-height: 5rem
 $navbar-item-img-max-height: $navbar-height * .5
+$family-sans-serif: "Lato", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
+$section-padding: 1.5rem 0
 
 $gray: rgb(157, 157, 157)
+$orange: rgb(230, 82, 44)
+
+$hero-font-base: 3.2rem
+$hero-main-padding-y: 3rem
+
+$primary: $orange
