Add features section to main page

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ default "en" .Site.LanguageCode }}">
+<html lang="{{ default "en" .Site.LanguageCode }}" class="has-navbar-fixed-top">
   <head>
     {{ partial "meta.html" . }}
     <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
