--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -3,14 +3,20 @@
 <section class="hero">
   <div class="hero-body">
     <div class="container has-text-centered">
-      <section class="hero-main">
+      <div class="hero-main">
         <h1 class="hero-title">
           {{ $title }}
         </h1>
         <h2 class="hero-subtitle">
           {{ $subtitle }}
         </h2>
-      </section>
+        <div class="hero-main-buttons">
+          <div class="buttons is-centered">
+            <a class="button is-dark is-medium">Get started</a>
+            <a class="button is-dark is-medium">Download</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
