--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -25,6 +25,9 @@
 .hero-main
   padding: $hero-main-padding-y 0
 
+  &-buttons
+    margin-top: 2rem
+
 .hero-title, .hero-subtitle
   +shadow
 
@@ -45,6 +48,8 @@
   .announcement-text
     +thin
     font-size: 1.5rem
+
+.section--features
 
 // Final Bulma import
 @import ../../node_modules/bulma/bulma
