--- a/source/sass/variables.sass
+++ b/source/sass/variables.sass
@@ -1,4 +1,4 @@
-$navbar-background-color: black
+//$navbar-background-color: black
 $navbar-height: 5rem
 $navbar-item-img-max-height: $navbar-height * .5
 $family-sans-serif: "Lato", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
