--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,5 +1,5 @@
 {{- $navbarLogo := .Site.Params.logos.navbar }}
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation">
   <div class="container">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
