Add Netlify configuration

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,4 +2,6 @@
 {{ partial "hero.html" . }}
 {{ partial "announcement.html" . }}
 {{ partial "features.html" . }}
+{{ partial "quote.html" . }}
+{{ partial "open-source.html" . }}
 {{ end }}
