--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -12,8 +12,8 @@
         </h2>
         <div class="hero-main-buttons">
           <div class="buttons is-centered">
-            <a class="button is-dark is-medium">Get started</a>
-            <a class="button is-dark is-medium">Download</a>
+            <a class="button is-uppercase is-dark">Get started</a>
+            <a class="button is-uppercase is-dark">Download</a>
           </div>
         </div>
       </div>
