--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,1 +1,5 @@
+{{- $faviconUrl := "/img/favicons/favicon.ico" | absURL }}
+
 <meta charset="utf-8">
+
+<link rel="icon" href="{{ $faviconUrl }}" type="image/x-icon">
