--- a/source/sass/variables.sass
+++ b/source/sass/variables.sass
@@ -1,13 +1,19 @@
-//$navbar-background-color: black
+@import ../../node_modules/bulma/sass/utilities/initial-variables
+
+$gray: rgb(157, 157, 157)
+$orange: rgb(230, 82, 44)
+$twitter-blue: #3b94d9
+
+$primary: $orange
+  
 $navbar-height: 5rem
 $navbar-item-img-max-height: $navbar-height * .5
 $family-sans-serif: "Lato", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
 $section-padding: 1.5rem 0
-
-$gray: rgb(157, 157, 157)
-$orange: rgb(230, 82, 44)
+$navbar-item-hover-color: $grey-lighter
+$navbar-item-hover-background-color: $black
+$navbar-dropdown-item-hover-color: $primary
+$navbar-dropdown-radius: none
 
 $hero-font-base: 3.2rem
 $hero-main-padding-y: 2rem
-
-$primary: $orange
