add navbar dropdowns

--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -4,16 +4,16 @@
   <div class="hero-body">
     <div class="container has-text-centered">
       <div class="hero-main">
-        <h1 class="hero-title">
+        <h1 class="hero-title has-text-white has-text-weight-normal is-size-1 is-size-2-mobile">
           {{ $title }}
         </h1>
-        <h2 class="hero-subtitle">
+        <h2 class="hero-subtitle has-text-white is-size-4 is-size-5-mobile">
           {{ $subtitle }}
         </h2>
         <div class="hero-main-buttons">
           <div class="buttons is-centered">
-            <a class="button is-uppercase is-dark">Get started</a>
-            <a class="button is-uppercase is-dark">Download</a>
+            <a class="button is-uppercase is-medium is-dark is-rounded" href="/docs/getting-started">Get started</a>
+            <a class="button is-uppercase is-medium is-dark is-rounded" href="/download">Download</a>
           </div>
         </div>
       </div>
