--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -13,14 +13,13 @@
         <span></span>
         <span></span>
         <span></span>
-        
       </a>
     </div>
 
     <div class="navbar-menu">
       <div class="navbar-end">
         <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link is-uppercase is-large">
+          <a class="navbar-link is-uppercase is-large has-text-grey-light">
             Docs
           </a>
       
@@ -41,24 +40,47 @@
           </div>
         </div>
 
-        <div class="navbar-item">
-          <div class="field is-grouped">
-            <p class="control">
-              <a class="button is-twitter-blue">
-                <span class="icon">
-                  <i class="fab fa-lg fa-twitter"></i>
-                </span>
-              </a>
-            </p>
-            <p class="control">
-              <a class="button">
-                <span class="icon">
-                  <i class="fab fa-lg fa-github"></i>
-                </span>
-              </a>
-            </p>
+        <a class="navbar-item is-uppercase has-text-grey-light">
+          Download
+        </a>
+
+        <a class="navbar-item is-uppercase has-text-grey-light">
+          Community
+        </a>
+
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link is-uppercase is-large has-text-grey-light" href="/blog">
+            Blog
+          </a>
+      
+          <div class="navbar-dropdown">
+            <a class="navbar-item">
+              Post 1
+            </a>
+            <a class="navbar-item">
+              Post 2
+            </a>
+            <a class="navbar-item">
+              Post 3
+            </a>
+            <hr class="navbar-divider">
+            <div class="navbar-item">
+              Version 0.7.1
+            </div>
           </div>
         </div>
+
+        <a class="navbar-item is-twitter-blue">
+          <span class="icon">
+            <i class="fab fa-lg fa-twitter"></i>
+          </span>
+        </a>
+
+        <a class="navbar-item is-github">
+          <span class="icon">
+            <i class="fab fa-lg fa-github"></i>
+          </span>
+        </a>
       </div>
     </div>
   </div>
