--- a/source/sass/variables.sass
+++ b/source/sass/variables.sass
@@ -1,5 +1,3 @@
-@import ../../node_modules/bulma/sass/utilities/initial-variables
-
 $gray: rgb(157, 157, 157)
 $orange: rgb(230, 82, 44)
 $twitter-blue: #3b94d9
@@ -14,6 +12,8 @@ $navbar-item-hover-color: $grey-lighter
 $navbar-item-hover-background-color: $black
 $navbar-dropdown-item-hover-color: $primary
 $navbar-dropdown-radius: none
+$navbar-dropdown-arrow: $primary
+$navbar-dropdown-arrow: $primary !important
 
 $hero-font-base: 3.2rem
 $hero-main-padding-y: 2rem
