add basic footer

--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -10,12 +10,15 @@
         <h2 class="hero-subtitle has-text-white is-size-4 is-size-5-mobile">
           {{ $subtitle }}
         </h2>
-        <div class="hero-main-buttons">
-          <div class="buttons is-centered">
+
+        <nav class="level">
+          <div class="level-item has-text-centered">
             <a class="button is-uppercase is-medium is-dark is-rounded" href="/docs/getting-started">Get started</a>
+          </div>
+          <div class="level-item">
             <a class="button is-uppercase is-medium is-dark is-rounded" href="/download">Download</a>
           </div>
-        </div>
+        </nav>
       </div>
     </div>
   </div>
