--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -4,7 +4,7 @@
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
         <img src="{{ $navbarLogo }}" alt="Prometheus navbar logo">
-        <span class="navbar-title">
+        <span class="navbar-title has-text-grey-lighter">
           {{ .Site.Title }}
         </span>
       </a>
@@ -19,7 +19,7 @@
     <div class="navbar-menu">
       <div class="navbar-end">
         <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link is-uppercase is-large has-text-grey-light">
+          <a class="navbar-link is-uppercase has-text-grey-light has-text-weight-bold">
             Docs
           </a>
       
@@ -40,16 +40,16 @@
           </div>
         </div>
 
-        <a class="navbar-item is-uppercase has-text-grey-light">
+        <a class="navbar-item is-uppercase has-text-grey-light has-text-weight-bold">
           Download
         </a>
 
-        <a class="navbar-item is-uppercase has-text-grey-light">
+        <a class="navbar-item is-uppercase has-text-grey-light has-text-weight-bold">
           Community
         </a>
 
         <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link is-uppercase is-large has-text-grey-light" href="/blog">
+          <a class="navbar-link is-uppercase has-text-grey-light has-text-weight-bold" href="/blog">
             Blog
           </a>
       
