--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -30,7 +30,6 @@
 
 .navbar
   .navbar-title
-    color: $gray
     margin-left: 10%
     font-size: 1.75rem
 
@@ -72,20 +71,9 @@
 
   &--quote
     +section-border
-    padding: 2rem
 
-    .quote-container
-      margin: 2rem 0
-
-    .quote
-      +thin
-      padding: 0 15%
-      font-size: 1.4rem
-      font-style: italic
-      margin-bottom: 1.5rem
-
-    .source
-      font-size: 1.2rem
+    img.sre
+      max-width: 50%
   
   &--opensource
     +section-border
