--- a/source/sass/variables.sass
+++ b/source/sass/variables.sass
@@ -14,6 +14,7 @@ $navbar-dropdown-item-hover-color: $primary
 $navbar-dropdown-radius: none
 $navbar-dropdown-arrow: $primary
 $navbar-dropdown-arrow: $primary !important
+$footer-background-color: $black
 
 $hero-font-base: 3.2rem
 $hero-main-padding-y: 2rem
