--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,6 +11,8 @@
     {{ block "main" . }}
     {{ end }}
 
+    {{ partial "footer.html" . }}
+
     {{ partial "javascript.html" . }}
   </body>
 </html>
