--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -4,7 +4,7 @@
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
         <img src="{{ $navbarLogo }}" alt="Prometheus navbar logo">
-        <span class="navbar-title has-text-grey-lighter">
+        <span class="navbar-title has-text-grey-lighter is-size-3 is-size-4-tablet is-size-5-mobile">
           {{ .Site.Title }}
         </span>
       </a>
