--- a/layouts/partials/announcement.html
+++ b/layouts/partials/announcement.html
@@ -1,8 +1,12 @@
 {{- $announcement := .Site.Params.announcement }}
-<section class="section section--announcement">
+<nav class="level is-mobile section--announcement">
   <div class="container has-text-centered">
-    <p class="announcement-text">
-      {{ $announcement | markdownify }}
-    </p>
+    <div class="level-item">
+      <div>
+        <p class="is-size-4 is-size-5-mobile has-text-weight-semibold">
+          {{ $announcement | markdownify }}
+        </p>
+      </div>
+    </div>
   </div>
-</section>
+</nav>
