--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -11,14 +11,10 @@
           {{ $subtitle }}
         </h2>
 
-        <nav class="level">
-          <div class="level-item has-text-centered">
-            <a class="button is-uppercase is-medium is-dark is-rounded" href="/docs/getting-started">Get started</a>
-          </div>
-          <div class="level-item">
-            <a class="button is-uppercase is-medium is-dark is-rounded" href="/download">Download</a>
-          </div>
-        </nav>
+        <div class="buttons is-centered">
+          <a class="button is-medium is-dark is-rounded" href="#">Get started</a>
+          <a class="button is-medium is-warning is-rounded" href="#">Download</a>
+        </div>
       </div>
     </div>
   </div>
