--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,11 +1,23 @@
 {{- $faviconUrl := "/img/favicons/favicon.ico" | absURL }}
 {{- $description := .Site.Params.description }}
+{{- $keywords := delimit .Site.Params.keywords ", " }}
+{{- $author := .Site.Params.author }}
 {{- $appleTouchIconSizes := slice 57 60 72 76 114 120 144 152 180 }}
 {{- $androidChromeIconSizes := slice 192 }}
 {{- $faviconSizes := slice 16 32 96 }}
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="{{ $description }}">
+<meta name="keywords" content="{{ $keywords }}">
+<meta name="author" content="{{ $author }}">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="/img/favicons/mstile-144x144.png">
+<meta name="theme-color" content="#ffffff">
+
+<link rel="alternate" type="application/atom+xml" title="Prometheus Blog » Feed" href="/blog/feed.xml">
+
+<link rel="shortcut icon" href="{{ $faviconUrl }}" type="image/x-icon">
 {{- range $appleTouchIconSizes }}
 {{- $sizes := printf "%dx%d" . . }}
 {{- $url := printf "/img/favicons/%dx%d.png" . . }}
@@ -21,5 +33,6 @@
 {{- $url := printf "/img/favicons/%dx%d.png" . . }}
 <link rel="icon" type="image/png" sizes="{{ $sizes }}" href="{{ $url }}">
 {{- end }}
+<link rel="manifest" href="/img/favicons/android-chrome-manifest.json">
+<link rel="canonical" href="{{ .Permalink }}">
 
-<link rel="shortcut icon" href="{{ $faviconUrl }}" type="image/x-icon">
