--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -30,6 +30,7 @@
 
   .navbar-burger
     span
+      height: 2px
       color: $primary
 
 .hero
@@ -71,9 +72,15 @@
       max-width: 40%
 
     .quote
+      padding: 0 20%
 
     .source
+      margin-top: 1.25rem
+      color: $grey-light
       padding: 0 3rem
+
+      a
+        color: $blue
   
   &--opensource
     .oss
