refresh company logos

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,8 +2,8 @@
 {{ partial "hero.html" . }}
 {{ partial "announcement.html" . }}
 {{ partial "features.html" . }}
-
-<hr />
-
 {{ partial "quote.html" . }}
+{{ partial "open-source.html" . }}
+<hr />
+{{ partial "users.html" . }}
 {{ end }}
