--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,3 +1,4 @@
+{{- $pageType := cond (.IsHome) .Kind .Section }}
 <!DOCTYPE html>
 <html lang="{{ default "en" .Site.LanguageCode }}" class="has-navbar-fixed-top">
   <head>
@@ -5,7 +6,7 @@
     <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
     {{ partial "css.html" . }}
   </head>
-  <body>
+  <body class="page--{{ $pageType }}">
     {{ partial "navbar.html" . }}
 
     {{ block "main" . }}
