--- a/layouts/partials/open-source.html
+++ b/layouts/partials/open-source.html
@@ -4,7 +4,7 @@
   <div class="container has-text-centered">
     <div class="columns is-vcentered">
       <div class="column is-half">
-        <h1 class="is-size-3">
+        <h1 class="is-size-3 is-size-4-tablet">
           <span class="icon">
             <i class="fab fa-github"></i>
           </span>
@@ -24,7 +24,7 @@
         </span>
       </div>
       <div class="column is-half">
-        <p class="cncf is-size-4">
+        <p class="cncf is-size-5 is-size-6-tablet">
           We are a <a href="https://cncf.io">Cloud Native Computing Foundation</a> member project.
         </p>
         <img class="cncf-logo" src="{{ $cncfLogo }}">
