--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,11 +6,13 @@
     <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
     {{ partial "css.html" . }}
   </head>
-  <body class="page--{{ $pageType }}">
-    {{ partial "navbar.html" . }}
+  <body class="page page--{{ $pageType }}">
+    <main class="main">
+      {{ partial "navbar.html" . }}
 
-    {{ block "main" . }}
-    {{ end }}
+      {{ block "main" . }}
+      {{ end }}
+    </main>
 
     {{ partial "footer.html" . }}
 
