begin creating docs template

--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -18,7 +18,7 @@
 
     <div class="navbar-menu">
       <div class="navbar-end">
-        <div class="navbar-item has-dropdown is-hoverable">
+        <div class="navbar-item has-dropdown is-mega is-hoverable">
           <a class="navbar-link is-uppercase has-text-grey-light has-text-weight-bold">
             Docs
           </a>
@@ -40,7 +40,7 @@
           </div>
         </div>
 
-        <a class="navbar-item is-uppercase has-text-grey-light has-text-weight-bold">
+        <a href="/download" class="navbar-item is-uppercase has-text-grey-light has-text-weight-bold">
           Download
         </a>
 
