--- a/source/sass/variables.sass
+++ b/source/sass/variables.sass
@@ -1,3 +1,6 @@
+// Font imports
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,500,600,700')
+
 $gray: rgb(157, 157, 157)
 $orange: rgb(230, 82, 44)
 $twitter-blue: #3b94d9
@@ -15,6 +18,9 @@ $navbar-dropdown-radius: none
 $navbar-dropdown-arrow: $primary
 $navbar-dropdown-arrow: $primary !important
 $footer-background-color: $black
+
+$panel-item-border: none
+$panel-block-hover-background-color: $white-ter
 
 $hero-font-base: 3.2rem
 $hero-main-padding-y: 2rem
