--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,3 +1,16 @@
 {{ define "main" }}
-{{ .Content }}
+<div class="container">
+  <article class="article--{{ .Section }}">
+    <div class="columns">
+      <div class="column is-2">
+        {{ partial "docs-nav.html" . }}
+      </div>
+      <div class="column is-10">
+        <div class="content">
+          {{ .Content }}
+        </div>
+      </div>
+    </div>
+  </article>
+</div>
 {{ end }}
