--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -1,11 +1,18 @@
-// Font imports
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,500,600,700')
+@charset "utf-8"
   
+ 
 // Initial Bulma variables
 @import ../../node_modules/bulma/sass/utilities/initial-variables
 @import ../../node_modules/bulma/sass/utilities/functions
 
 @import variables
+
+.navbar-item.is-mega
+  position: static
+
+  .meta-menu-title
+    margin-bottom: 0
+    padding: .375rem 1rem
 
 =shadow
   text-shadow: rgba(0, 0, 0, 0.2) 0px 2px 0px
@@ -15,6 +22,12 @@
 
 =smaller-container
   padding: 0 15%
+
+=x
+  border: 1px solid red
+
+.article--docs
+  margin: 2rem 0
 
 // Guarantee sticky footer
 .page
