--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -1,18 +1,15 @@
 @charset "utf-8"
-  
- 
+
+@import syntax
+
 // Initial Bulma variables
 @import ../../node_modules/bulma/sass/utilities/initial-variables
 @import ../../node_modules/bulma/sass/utilities/functions
-
 @import variables
+
 
 .navbar-item.is-mega
   position: static
-
-  .meta-menu-title
-    margin-bottom: 0
-    padding: .375rem 1rem
 
 =shadow
   text-shadow: rgba(0, 0, 0, 0.2) 0px 2px 0px
