--- a/layouts/partials/javascript.html
+++ b/layouts/partials/javascript.html
@@ -1,2 +1,3 @@
 <script type="text/javascript" src="/js/app.js"></script>
 <script async defer src="https://buttons.github.io/buttons.js"></script>
+<script async defer src="/js/bulma-accordion.min.js"></script>
